--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">NASAWallpapers</string>
+    <string name="app_name">To The Stars</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="server_error">An error occured while trying to communicate with the servers</string>
 </resources>
