--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="server_error">An error occured while trying to communicate with the servers</string>
+    <string name="error_message">This photo is not available</string>
 </resources>
