--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="fab_full_screen">Full Screen</string>
     <string name="fab_desktop">Use as wallpaper</string>
     <string name="fab_save">Save</string>
+    <string name="share_photo">Share photo</string>
 </resources>
