add single photo activity and progress bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="fab_desktop">Use as wallpaper</string>
     <string name="fab_save">Save</string>
     <string name="share_photo">Share photo</string>
+    <string name="photo_shared">photo_shared</string>
 </resources>
