--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,8 @@
     <string name="already_favorite">This photo is already in your favorites</string>
     <string name="no_favorite">You haven\'t saved any favorite yet</string>
     <string name="favorite_removed">Photo removed from your favorites</string>
+    <string name="desktop_picture">Desktop picture</string>
+    <string name="desktop_picture_desc">Use this photo as desktop picture ?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
